WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
230053
Regression (
r282130
): [ macOS iOS wk2 ] imported/w3c/web-platform-tests/storage/persisted.https.any.html is failing
https://bugs.webkit.org/show_bug.cgi?id=230053
Summary
Regression (r282130): [ macOS iOS wk2 ] imported/w3c/web-platform-tests/stora...
ayumi_kojima
Reported
2021-09-08 10:18:02 PDT
imported/w3c/web-platform-tests/storage/persisted.https.any.html Is failing on macOS wk2 and iOS. History:
https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fstorage%2Fpersisted.https.any.html
Diff: --- /Volumes/Data/worker/bigsur-debug-tests-wk2/build/layout-test-results/imported/w3c/web-platform-tests/storage/persisted.https.any-expected.txt +++ /Volumes/Data/worker/bigsur-debug-tests-wk2/build/layout-test-results/imported/w3c/web-platform-tests/storage/persisted.https.any-actual.txt @@ -1,4 +1,4 @@ PASS persisted() method exists and returns a Promise -PASS persisted() returns a promise and resolves as boolean with false +FAIL persisted() returns a promise and resolves as boolean with false assert_equals: expected false but got true According to the history, it looks like the test started failing at
https://trac.webkit.org/changeset/282130/webkit
Attachments
Patch
(15.10 KB, patch)
2021-09-08 11:59 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Patch
(15.18 KB, patch)
2021-09-08 12:21 PDT
,
Sihui Liu
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(15.18 KB, patch)
2021-09-08 12:30 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Patch for landing
(15.18 KB, patch)
2021-09-08 13:24 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-09-08 10:19:43 PDT
<
rdar://problem/82879548
>
Sihui Liu
Comment 2
2021-09-08 11:59:57 PDT
Created
attachment 437653
[details]
Patch
Chris Dumez
Comment 3
2021-09-08 12:03:12 PDT
Comment on
attachment 437653
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=437653&action=review
> Source/WebKit/NetworkProcess/NetworkProcess.cpp:2424 > + completionHandler();
This call the completion handler before the storage is actually cleared on the background thread.
> Source/WebKit/UIProcess/WebsiteData/WebsiteDataStore.cpp:2159 > + auto callbackAggregator = CallbackAggregator::create(WTFMove(completionHandler));
Why are we using a callback aggregator for a single function call? Just pass the completion handler to clearStorage().
> Tools/ChangeLog:9 > + Clear storage states between tests so test does not affect each other.
test does -> tests do
Sihui Liu
Comment 4
2021-09-08 12:21:40 PDT
Created
attachment 437654
[details]
Patch
Sihui Liu
Comment 5
2021-09-08 12:30:45 PDT
Created
attachment 437655
[details]
Patch
Sihui Liu
Comment 6
2021-09-08 12:44:19 PDT
Comment on
attachment 437655
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=437655&action=review
> Source/WebKit/ChangeLog:11 > + Coverd by existing tests.
Typo: Covered
Sihui Liu
Comment 7
2021-09-08 13:24:38 PDT
Created
attachment 437661
[details]
Patch for landing
EWS
Comment 8
2021-09-08 14:09:52 PDT
Committed
r282170
(
241462@main
): <
https://commits.webkit.org/241462@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 437661
[details]
.
Eric Hutchison
Comment 9
2021-09-08 15:33:21 PDT
***
Bug 230068
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug