Regression (r282130): [ macOS iOS wk2 ] imported/w3c/web-platform-tests/storage/persisted.https.any.html is failing https://bugs.webkit.org/show_bug.cgi?id=230053 <rdar://problem/82879548>

Reviewed by Chris Dumez.

Source/WebKit:

Add SPI to clear storage states for testing.

Covered by existing tests.

* NetworkProcess/NetworkProcess.cpp:
(WebKit::NetworkProcess::clearStorage):
* NetworkProcess/NetworkProcess.h:
* NetworkProcess/NetworkProcess.messages.in:
* NetworkProcess/storage/NetworkStorageManager.cpp:
(WebKit::NetworkStorageManager::clearStorageForTesting):
* NetworkProcess/storage/NetworkStorageManager.h:
* UIProcess/API/C/WKWebsiteDataStoreRef.cpp:
(WKWebsiteDataStoreClearStorage):
* UIProcess/API/C/WKWebsiteDataStoreRef.h:
* UIProcess/Network/NetworkProcessProxy.cpp:
(WebKit::NetworkProcessProxy::clearStorage):
* UIProcess/Network/NetworkProcessProxy.h:
* UIProcess/WebsiteData/WebsiteDataStore.cpp:
(WebKit::WebsiteDataStore::clearStorage):
* UIProcess/WebsiteData/WebsiteDataStore.h:

Tools:

Clear storage states between tests so tests do not affect each other.

* WebKitTestRunner/TestController.cpp:
(WTR::TestController::resetStateToConsistentValues):
(WTR::TestController::clearStorage):
* WebKitTestRunner/TestController.h:

LayoutTests:

Skip storage/ tests on WebKitLegacy platforms as the API is not implemented there.

* TestExpectations:
* platform/wk2/TestExpectations:


Canonical link: https://commits.webkit.org/241462@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282170 268f45cc-cd09-0410-ab3c-d52691b4dbfc