Source/WebKit/UIProcess/WebsiteData/WebsiteDataStore.cpp
@@ -2154,6 +2154,11 @@ void WebsiteDataStore::resetQuota(CompletionHandler<void()>&& completionHandler)
     networkProcess().resetQuota(m_sessionID, [callbackAggregator] { });
 }
 
+void WebsiteDataStore::clearStorage(CompletionHandler<void()>&& completionHandler)
+{
+    networkProcess().clearStorage(m_sessionID, WTFMove(completionHandler));
+}
+
 #if !PLATFORM(COCOA)
 WTF::String WebsiteDataStore::defaultMediaCacheDirectory()
 {
