Tools/WebKitTestRunner/TestController.h
@@ -281,6 +281,7 @@ public:
     void terminateServiceWorkers();
 
     void resetQuota();
+    void clearStorage();
 
     void removeAllSessionCredentials();
 
